<resources>
  <string name="app_name">DemoCardio</string>
  <string name="action_scan_ble_device">Scan BLE Device</string>
  <string name="action_disconnect">Disconnect</string>
  <string name="action_read_fw_version">Read FW Version</string>
  <string name="action_read_battery_level">Read Battery Level</string>
  <string name="action_calibration">Calibration</string>
  <string name="sbp_title">SBP</string>
  <string name="dbp_title">DBP</string>
  <string name="hr_title">HR</string>
  <string name="select_device">SELECT BLE DEVICE</string>
  <string name="scanning">Scanning a devices...</string>
  <string name="bt_ble_not_support">Bluetooth Low Energy not supported</string>
  <string name="bt_bt_not_support">Bluetooth is not supported</string>
  <string name="cancel">Cancel</string>
  <string name="scan">Scan</string>
  <string name="paired">paired</string>
  <string name="device_list_fragment_tag">device_list_fragment_tag</string>
  <string name="bt_not_available">Bluetooth is not available.</string>
  <string name="bt_connect_device_again">Please connect the device again.</string>
  <string name="bt_connect_device_success">Device is connected</string>
  <string name="package_identity">5d2b160c3d83f1134f9909be64f41a58</string>
  <string name="request_permission_access_coarse_location_title">This app needs location access</string>
  <string name="request_permission_access_coarse_location_content">Please grant location access so this app can detect ble device.</string>
  <string name="request_permission_external_storage_title">This app needs external storage access</string>
  <string name="request_permission_external_storage_content">Please grant external storage access so this app can save the measurement data.</string>
  <string name="request_permission_read_phone_state_title">This app needs read phone state</string>
  <string name="request_permission_read_phone_state_content">Please grant read phone state so this app can save the measurement data.</string>
  <string name="calibration_title">Calibration</string>
  <string name="calibration_fragment_tag">calibration_fragment_tag</string>
</resources>
