<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.vitalsigns.democardio.MainActivity">

  <item
    android:id="@+id/action_scan_ble_device"
    android:orderInCategory="100"
    android:title="@string/action_scan_ble_device"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_disconnect"
    android:orderInCategory="101"
    android:title="@string/action_disconnect"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_read_fw_version"
    android:orderInCategory="102"
    android:title="@string/action_read_fw_version"
    app:showAsAction="never"/>

  <item
    android:id="@+id/action_read_battery_level"
    android:orderInCategory="103"
    android:title="@string/action_read_battery_level"
    app:showAsAction="never"/>
 </menu>
